# sal-learning

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/examples/: sal_contrast_examples.jsonl  sal_field_examples.jsonl  sample_dialogues.jsonl
data/seeds/: seed_compassion.json  seed_depth.json  seed_novelty.json  seed_resonance.json  seed_stability.json
docs/: architecture.md  how_sal_differs.md  index.md  plots.md  principles.md
hf/: modelcard.md  sal_config.json
sal/: __init__.py  communication.py  emergence.py  filters.py  psc.py  stability.py  utils.py
