[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sal-learning"
version = "1.0.0"
description = "Self-Alignment Learning: Communication-Based AI Growth"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aaron Liam Lee", email = "info@emergenzwerke.de"}
]
maintainers = [
    {name = "Aaron Liam Lee", email = "info@emergenzwerke.de"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "continual-learning",
    "catastrophic-forgetting",
    "communication-based-learning",
    "stability-preservation",
    "emergence",
    "neural-networks",
    "pytorch"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
]

[project.urls]
Homepage = "https://emergenzwerke.de"
Documentation = "https://github.com/Whiteroom-Ai/sal-learning"
Repository = "https://github.com/Whiteroom-Ai/sal-learning"
Paper = "https://zenodo.org/records/17772044"

[tool.setuptools.packages.find]
where = ["."]
include = ["sal*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
